--- a/Resources/Prototypes/Roles/Jobs/Security/security_cadet.yml
+++ b/Resources/Prototypes/Roles/Jobs/Security/security_cadet.yml
@@ -10,6 +10,10 @@
       department: Security
       time: 54000 #15 hrs
       inverted: true # stop playing intern if you're good at security!
+    - !type:TraitsRequirement # No Pacifist Sec
+      inverted: true
+      traits:
+      - Pacifist
   startingGear: SecurityCadetGear
   icon: "JobIconSecurityCadet"
   supervisors: job-supervisors-security
