--- a/Resources/Prototypes/Roles/Jobs/Security/warden.yml
+++ b/Resources/Prototypes/Roles/Jobs/Security/warden.yml
@@ -7,6 +7,10 @@
     - !type:RoleTimeRequirement
       role: JobSecurityOfficer
       time: 36000 #10 hrs
+    - !type:TraitsRequirement # No Pacifist Sec
+      inverted: true
+      traits:
+      - Pacifist
   startingGear: WardenGear
   icon: "JobIconWarden"
   supervisors: job-supervisors-hos
