--- a/Resources/Prototypes/Roles/Jobs/Security/head_of_security.yml
+++ b/Resources/Prototypes/Roles/Jobs/Security/head_of_security.yml
@@ -17,6 +17,10 @@
       time: 144000 #40 hrs
     - !type:AgeRequirement
       requiredAge: 20
+    - !type:TraitsRequirement # No Pacifist Sec
+      inverted: true
+      traits:
+      - Pacifist
   weight: 10
   startingGear: HoSGear
   icon: "JobIconHeadOfSecurity"
