--- a/Resources/Prototypes/Roles/Jobs/Security/security_cadet.yml
+++ b/Resources/Prototypes/Roles/Jobs/Security/security_cadet.yml
@@ -10,10 +10,11 @@
       department: Security
       time: 54000 #15 hrs
       inverted: true # stop playing intern if you're good at security!
-    - !type:TraitsRequirement # No Pacifist Sec
+    - !type:TraitsRequirement
       inverted: true
       traits:
       - Pacifist
+      - Blindness
   startingGear: SecurityCadetGear
   icon: "JobIconSecurityCadet"
   supervisors: job-supervisors-security
