--- a/Resources/Prototypes/Roles/Jobs/Security/warden.yml
+++ b/Resources/Prototypes/Roles/Jobs/Security/warden.yml
@@ -7,10 +7,11 @@
     - !type:RoleTimeRequirement
       role: JobSecurityOfficer
       time: 36000 #10 hrs
-    - !type:TraitsRequirement # No Pacifist Sec
+    - !type:TraitsRequirement
       inverted: true
       traits:
       - Pacifist
+      - Blindness
   startingGear: WardenGear
   icon: "JobIconWarden"
   supervisors: job-supervisors-hos
