--- a/Resources/Prototypes/Roles/Jobs/Security/security_officer.yml
+++ b/Resources/Prototypes/Roles/Jobs/Security/security_officer.yml
@@ -7,10 +7,11 @@
     - !type:DepartmentTimeRequirement
       department: Security
       time: 36000 #10 hrs
-    - !type:TraitsRequirement # No Pacifist Sec
+    - !type:TraitsRequirement
       inverted: true
       traits:
       - Pacifist
+      - Blindness
   startingGear: SecurityOfficerGear
   icon: "JobIconSecurityOfficer"
   supervisors: job-supervisors-hos
