anti space technology

--- a/Resources/Prototypes/Entities/Mobs/NPCs/space.yml
+++ b/Resources/Prototypes/Entities/Mobs/NPCs/space.yml
@@ -505,6 +505,7 @@
       - ActionCritFakeDeath
       - ActionCritLastWords
   - type: Godmode
+  - type: MovementAlwaysTouching
 
 - type: entity
   parent: MobSnail
