add structural damage taken to a lot of other things

--- a/Resources/Prototypes/Entities/Objects/Power/lights.yml
+++ b/Resources/Prototypes/Entities/Objects/Power/lights.yml
@@ -14,7 +14,7 @@
         state: normal
   - type: LightBulb
   - type: Damageable
-    damageContainer: Inorganic
+    damageContainer: StructuralInorganic
   - type: DamageOnLand
     damage:
       types:
