--- a/Resources/Prototypes/Entities/Objects/Weapons/Guns/turrets.yml
+++ b/Resources/Prototypes/Entities/Objects/Weapons/Guns/turrets.yml
@@ -12,7 +12,7 @@
       layers:
         - state: syndie_broken
     - type: Damageable
-      damageContainer: Inorganic
+      damageContainer: StructuralInorganic
     - type: Destructible
       thresholds:
         - trigger:
@@ -68,7 +68,7 @@
     - type: CombatMode
       toggleMouseRotator: false
     - type: Damageable
-      damageContainer: Inorganic
+      damageContainer: StructuralInorganic
     - type: Destructible
       thresholds:
         - trigger:
