--- a/Resources/Prototypes/Entities/Structures/Decoration/mannequin.yml
+++ b/Resources/Prototypes/Entities/Structures/Decoration/mannequin.yml
@@ -38,7 +38,7 @@
     graph: Mannequin
     node: mannequin
   - type: Damageable
-    damageContainer: Inorganic
+    damageContainer: StructuralInorganic
   - type: Destructible
     thresholds:
     - trigger:
