--- a/Resources/Prototypes/Entities/Structures/Specific/Janitor/drain.yml
+++ b/Resources/Prototypes/Entities/Structures/Specific/Janitor/drain.yml
@@ -41,7 +41,7 @@
     - type: DrainableSolution
       solution: drainBuffer
     - type: Damageable
-      damageContainer: Inorganic
+      damageContainer: StructuralInorganic
       damageModifierSet: Metallic
     - type: Destructible
       thresholds:
