--- a/Resources/Prototypes/Wires/layouts.yml
+++ b/Resources/Prototypes/Wires/layouts.yml
@@ -43,6 +43,10 @@
   id: AirlockArmory
 
 - type: wireLayout
+  parent: Airlock
+  id: AirlockExternal
+
+- type: wireLayout
   id: HighSec
   wires:
   - !type:PowerWireAction
