Change xeno spawner to be less deadly

--- a/Resources/Prototypes/Entities/Markers/Spawners/mobs.yml
+++ b/Resources/Prototypes/Entities/Markers/Spawners/mobs.yml
@@ -862,7 +862,7 @@
     layers:
     - state: green
     - state: running
-      sprite: Mobs/Aliens/Xenos/queen.rsi
+      sprite: Mobs/Aliens/Xenos/praetorian.rsi
   - type: ConditionalSpawner
     prototypes:
-    - MobXenoQueenNoGhost
+    - MobXenoLonePraetorianNoGhost
