--- a/Resources/Prototypes/Entities/Objects/Consumable/Food/ingredients.yml
+++ b/Resources/Prototypes/Entities/Objects/Consumable/Food/ingredients.yml
@@ -541,6 +541,13 @@
   - type: SliceableFood
     count: 3
     slice: FoodCheeseSlice
+  - type: FoodSequenceElement
+    entries:
+      burger:
+        name: food-sequence-burger-content-cheese
+        sprite:
+          sprite: Objects/Consumable/Food/ingredients.rsi
+          state: cheesewheel
 
 - type: entity
   name: cheese wedge
@@ -563,6 +570,13 @@
   - type: Tag
     tags:
     - Slice
+  - type: FoodSequenceElement
+    entries:
+      burger:
+        name: food-sequence-burger-content-cheese
+        sprite:
+          sprite: Objects/Consumable/Food/ingredients.rsi
+          state: cheesewedge
 
 - type: entity
   name: chèvre log
