modified:   Resources/Prototypes/Entities/Clothing/Belt/belts.yml 	modified:   Resources/Prototypes/Entities/Clothing/Head/hardsuit-helmets.yml 	modified:   Resources/Textures/Clothing/Head/Hardsuits/bluehelm.rsi/meta.json

--- a/Resources/Prototypes/Entities/Clothing/Belt/belts.yml
+++ b/Resources/Prototypes/Entities/Clothing/Belt/belts.yml
@@ -706,7 +706,7 @@
 - type: entity
   parent: ClothingBeltStorageBase
   id: ClothingBeltBS
-  name: blue belt
+  name: blue shield's belt
   description: A high utility belt, capable of holding countless tools and weapons of great use.
   components:
   - type: Sprite
