--- a/Resources/migration.yml
+++ b/Resources/migration.yml
@@ -380,3 +380,7 @@ SignHydro3: SignHydro1
 
 # 2024-07-27
 LogicGate: LogicGateOr
+
+# 2024-08-08
+MaterialReclaimer: null
+MaterialReclaimerMachineCircuitboard: null
