--- a/Resources/Prototypes/GameRules/events.yml
+++ b/Resources/Prototypes/GameRules/events.yml
@@ -342,7 +342,7 @@
     - id: MobSnailMoth
       prob: 0.002
     - id: MobSnailInstantDeath
-      prob: 0.000001
+      prob: 0.00001 #  ~ 1:2000 snails
 
 - type: entity
   id: PowerGridCheck
