Removed clown and syndi evac shuttle from rotation. Updated lobby art to webp instead of big PNG

--- a/Resources/Prototypes/lobbyscreens.yml
+++ b/Resources/Prototypes/lobbyscreens.yml
@@ -48,4 +48,4 @@
   
 - type: lobbyBackground
   id: StationCafe
-  background: /Textures/LobbyScreens/stationcafe.png
+  background: /Textures/LobbyScreens/stationcafe.webp
