--- a/Resources/Textures/LobbyScreens/attributions.yml
+++ b/Resources/Textures/LobbyScreens/attributions.yml
@@ -58,7 +58,7 @@
   copyright: "GetOutMarutak,aka.Snicket on Discord/github/Cara/Ko-fi"
   source: "https://github.com/space-wizards/space-station-14"
 
-- files: ["stationcafe.png"]
+- files: ["stationcafe.webp"]
   license: "CC-BY-NC-SA-3.0"
-  copyright: "amatiramasu on discord"
+  copyright: "Amadisaronno. amatiramasu on Discord"
   source: "https://github.com/ss14-harmony/space-station-14"
