--- a/Resources/Prototypes/Entities/Objects/Fun/toys.yml
+++ b/Resources/Prototypes/Entities/Objects/Fun/toys.yml
@@ -52,6 +52,12 @@
         reagents:
         - ReagentId: Fiber
           Quantity: 10
+  - type: SecretStash
+    secretStashName: secret-stash-plushy
+  - type: ToolOpenable
+    openToolQualityNeeded: Slicing
+    closeToolQualityNeeded: Slicing # Should probably be stitching or something if that gets added
+    name: secret-stash-plushy
 
 - type: entity
   parent: BasePlushie
