--- a/Resources/Prototypes/NPCs/mob.yml
+++ b/Resources/Prototypes/NPCs/mob.yml
@@ -90,3 +90,10 @@
     - tasks:
         - !type:HTNCompoundTask
           task: IdleCompound
+        
+- type: htnCompound
+  id: NiceCarpCompound
+  branches:
+    - tasks:
+        - !type:HTNCompoundTask
+          task: IdleCompound
