--- a/Resources/Prototypes/Entities/Markers/Spawners/mobs.yml
+++ b/Resources/Prototypes/Entities/Markers/Spawners/mobs.yml
@@ -76,7 +76,7 @@
 
 - type: entity
   name: Poppy Spawner
-  id: SpawnMobPoppyMorty
+  id: SpawnMobPoppy
   parent: MarkerBase
   components:
   - type: Sprite
@@ -85,7 +85,20 @@
       - state: ai
   - type: ConditionalSpawner
     prototypes:
-      - MobPossumMortyOld
+      - MobPossumPoppy
+
+- type: entity
+  name: Goji Spawner
+  id: SpawnMobGoji
+  parent: MarkerBase
+  components:
+  - type: Sprite
+    layers:
+      - state: green
+      - state: ai
+  - type: ConditionalSpawner
+    prototypes:
+      - MobGoji
 
 - type: entity
   name: Raccoon Morticia Spawner
