--- a/Resources/Prototypes/Entities/Mobs/NPCs/silicon.yml
+++ b/Resources/Prototypes/Entities/Mobs/NPCs/silicon.yml
@@ -329,6 +329,28 @@
     templateId: head
 
 - type: entity
+  parent:
+  - MobSiliconBase
+  - StripableInventoryBase
+  id: MobSecuritron
+  name: securitron
+  description: The last line of defense. The station's last hope.
+  components:
+  - type: Sprite
+    layers:
+    - map: ["enum.DamageStateVisualLayers.Base"]
+      state: securitron1
+      sprite: Mobs/Silicon/Bots/securitron.rsi
+  - type: Construction
+    graph: Medibot
+    node: bot
+  - type: InteractionPopup
+    interactSuccessString: petting-success-securitron
+    interactFailureString: petting-failure-securitron
+  - type: Inventory
+    templateId: head
+
+- type: entity
   parent: MobSiliconBase
   id: MobSupplyBot
   name: supplybot
