--- a/Resources/Prototypes/Entities/Objects/Misc/containment_field_gen_upgrade.yml
+++ b/Resources/Prototypes/Entities/Objects/Misc/containment_field_gen_upgrade.yml
@@ -10,6 +10,4 @@
   - type: Item
     sprite: Objects/Misc/containment_field_alarm.rsi
     size: Tiny
-  - type: Tag
-    tags:
-    - ContainmentFieldAlarmUpgrade
+  - type: ContainmentFieldUpgrader
