--- a/Resources/Prototypes/Recipes/Cooking/meal_recipes.yml
+++ b/Resources/Prototypes/Recipes/Cooking/meal_recipes.yml
@@ -1990,3 +1990,12 @@
     FoodTomato: 1
     FoodCabbage: 1
     FoodOnionSlice: 2
+
+- type: microwaveMealRecipe
+  id: RecipeCroissant
+  name: croissant recipe
+  result: FoodBakedCroissant
+  time: 5
+  solids:
+    FoodCroissantRaw: 1
+    FoodButterSlice: 1
