--- a/Resources/Prototypes/Entities/Objects/Tools/crowbars.yml
+++ b/Resources/Prototypes/Entities/Objects/Tools/crowbars.yml
@@ -29,11 +29,15 @@
   - type: StaticPrice
     price: 22
   - type: Prying
+  - type: Sprite
+    sprite: Objects/Tools/crowbar.rsi
   - type: Clothing
+    sprite: Objects/Tools/crowbar.rsi
     quickEquip: false
     slots:
     - Belt
   - type: Item
+    sprite: Objects/Tools/crowbar.rsi
     size: Normal
     shape:
     - 0,0,0,1
@@ -45,12 +49,9 @@
   description: A multipurpose tool to pry open doors and fight interdimensional invaders.
   components:
   - type: Sprite
-    sprite: Objects/Tools/crowbar.rsi
     state: icon
   - type: Item
-    sprite: Objects/Tools/crowbar.rsi
     storedSprite:
-      sprite: Objects/Tools/crowbar.rsi
       state: storage
 
 # Emergency (red) Crowbar
@@ -65,13 +66,12 @@
     - Crowbar
     - CrowbarRed
   - type: Sprite
-    sprite: Objects/Tools/crowbar.rsi
     layers:
     - state: icon
     - state: cover-icon
       color: "#990000"
   - type: Item
-    sprite: Objects/Tools/crowbar.rsi
+    size: Small # for pockets
     storedSprite:
       state: red-storage
       sprite: Objects/Tools/crowbar.rsi
@@ -85,7 +85,6 @@
       - state: cover-inhand-right
         color: "#990000"
   - type: Clothing
-    sprite: Objects/Tools/crowbar.rsi
     clothingVisuals:
       belt:
       - state: equipped-BELT
@@ -99,13 +98,11 @@
   description: A multipurpose tool to pry open doors and fight interdimensional invaders, printed from an autolathe.
   components:
   - type: Sprite
-    sprite: Objects/Tools/crowbar.rsi
     layers:
     - state: icon
     - state: cover-icon
       color: "#00621c"
   - type: Item
-    sprite: Objects/Tools/crowbar.rsi
     storedSprite:
       state: green-storage
       sprite: Objects/Tools/crowbar.rsi
@@ -119,7 +116,6 @@
       - state: cover-inhand-right
         color: "#00621c"
   - type: Clothing
-    sprite: Objects/Tools/crowbar.rsi
     clothingVisuals:
       belt:
       - state: equipped-BELT
@@ -133,13 +129,11 @@
   description: A multipurpose tool to pry open doors and fight interdimensional invaders, found in toolboxes.
   components:
   - type: Sprite
-    sprite: Objects/Tools/crowbar.rsi
     layers:
     - state: icon
     - state: cover-icon
       color: "#673800"
   - type: Item
-    sprite: Objects/Tools/crowbar.rsi
     storedSprite:
       state: orange-storage
       sprite: Objects/Tools/crowbar.rsi
@@ -153,7 +147,6 @@
       - state: cover-inhand-right
         color: "#673800"
   - type: Clothing
-    sprite: Objects/Tools/crowbar.rsi
     clothingVisuals:
       belt:
       - state: equipped-BELT
@@ -167,13 +160,11 @@
   description: A pocket crowbar designed to pry open doors and firelocks during power outages, dispensed from Engineering.
   components:
   - type: Sprite
-    sprite: Objects/Tools/crowbar.rsi
     layers:
     - state: icon
     - state: cover-icon
       color: "#968000"
   - type: Item
-    sprite: Objects/Tools/crowbar.rsi
     storedSprite:
       state: yellow-storage
       sprite: Objects/Tools/crowbar.rsi
@@ -187,7 +178,6 @@
       - state: cover-inhand-right
         color: "#968000"
   - type: Clothing
-    sprite: Objects/Tools/crowbar.rsi
     clothingVisuals:
       belt:
       - state: equipped-BELT
