--- a/Resources/Prototypes/Entities/Objects/Tools/crowbars.yml
+++ b/Resources/Prototypes/Entities/Objects/Tools/crowbars.yml
@@ -52,6 +52,7 @@
     state: icon
   - type: Item
     storedSprite:
+      sprite: Objects/Tools/crowbar.rsi
       state: storage
 
 # Emergency (red) Crowbar
